FIX Z-Index Header Setting Pages

--- a/assets/admin.css
+++ b/assets/admin.css
@@ -198,7 +198,7 @@ section.sv_admin_section .section_head {
 	align-items: center;
 	background-color: #FFF;
 	line-height: 1;
-	z-index: 500000;
+	z-index: 50000;
 	position: sticky;
 	top: 0;
 	flex-direction: row;
